first version of matchpoint ranking
